Fix navbar overlapping issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,14 +54,9 @@ $comment-counter: #1ef9ff;
 }
 
 body {
-    padding-top: 90px;
+    padding-top: 60px;
 }
 
-@media (max-width: 979px){
-    body {
-        padding-top: 0px;
-}
-}
 
 footer {
     color: #666;
